rostbot/bot-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rostbot
  name: bot-backend-service
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: rostbot
    service: backend
  type: ClusterIP
