rostbot/bot-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations: # This is information to the Ingress modules of kubernetes, to note that you want the endpoint publicly accessible.
    kubernetes.io/ingress.class: nginx-public
  name: rostbot-public
  labels:
    app: rostbot
spec:
  rules:
    - host: TDDC88-company-1-2020.kubernetes-public.it.liu.se
      http:
        paths:
        - backend:
            serviceName: rostbot-service
            servicePort: 80
          path: /
